--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
 
   app:
     build: 
-      context: node
+      context: ./node
     container_name: app
     entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh
     networks: 
@@ -33,7 +33,7 @@ services:
   
   nginx:
     build: 
-      context: nginx
+      context: ./nginx
     image: cidstein/nginx
     container_name: nginx
     networks: 
